...
                    }
                )
            TextField(
                value = query,
                onValueChange = changeQuery,
                modifier =
                    Modifier.fillMaxWidth().testTag("component_search").semantics {
                        contentDescription = searchLabel
                    },
                placeholder = { Text(searchLabel, Modifier.clearAndSetSemantics {}) },
                leadingIcon = {
                    Icon(painterResource(R.drawable.ic_search), contentDescription = null)
                },
...
